# Learn-OpenGL

./: CMakeLists.txt  README.md  convolution.comp  cubes.cc  shader.fs  shader.vs
apps/: cubes.cc  main.cc  read.cc
include/: Mesh.hpp
shaders/: shader.vert
